Fix large post title floating out of the screens.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -101,3 +101,7 @@ code {
 p.post-subtitle {
   opacity: 0.7;
 }
+
+h1.post-title {
+  word-break: break-word;
+}
